# serializer version: 1
# name: test_generate_content_file_processing_succeeds
  list([
    tuple(
      '',
      tuple(
      ),
      dict({
        'contents': list([
          'Describe this image from my doorbell camera',
          File(name='doorbell_snapshot.jpg', display_name=None, mime_type=None, size_bytes=None, create_time=None, expiration_time=None, update_time=None, sha256_hash=None, uri=None, download_uri=None, state=<FileState.ACTIVE: 'ACTIVE'>, source=None, video_metadata=None, error=None),
          File(name='context.txt', display_name=None, mime_type=None, size_bytes=None, create_time=None, expiration_time=None, update_time=None, sha256_hash=None, uri=None, download_uri=None, state=<FileState.PROCESSING: 'PROCESSING'>, source=None, video_metadata=None, error=None),
        ]),
        'model': 'models/gemini-2.0-flash',
      }),
    ),
  ])
# ---
# name: test_generate_content_service_with_image
  list([
    tuple(
      '',
      tuple(
      ),
      dict({
        'contents': list([
          'Describe this image from my doorbell camera',
          b'some file',
          b'some file',
        ]),
        'model': 'models/gemini-2.0-flash',
      }),
    ),
  ])
# ---
# name: test_generate_content_service_without_images
  list([
    tuple(
      '',
      tuple(
      ),
      dict({
        'contents': list([
          'Write an opening speech for a Home Assistant release party',
        ]),
        'model': 'models/gemini-2.0-flash',
      }),
    ),
  ])
# ---
# name: test_load_entry_with_unloaded_entries
  list([
    tuple(
      '',
      tuple(
      ),
      dict({
        'contents': list([
          'Write an opening speech for a Home Assistant release party',
        ]),
        'model': 'models/gemini-2.0-flash',
      }),
    ),
  ])
# ---
